# faustify

./: .gitignore  pyproject.toml
faustify/: app.py
faustify/events/: keep_alive.py  user_events.py  user_views.py
tests/: conftest.py  test_events.py  test_utils.py
