[tool.poetry]
name = "faustify"
version = "0.1.0"
description = ""
authors = ["twocucao <twocucao@gmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "aliyun"
url = 'https://mirrors.aliyun.com/pypi/simple/'

[tool.poetry.dependencies]
python = "^3.7"
faust = "^1.10.4"
aiodns = "^2.0.0"
aiomonitor = "^0.4.5"
redis = "^3.5.3"
orjson = "^3.1.0"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
mypy = "^0.780"
flake8 = "^3.8.3"
pytest = "^5.4.3"
pytest-cov = "^2.9.0"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry.scripts]
faustify-cli = "faustify.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
